--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ server:
 spring:
   application:
     name: sboard
-    version: 0.0.1
+    version: ${version}
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     password: 1234
@@ -30,6 +30,14 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+
+  security:
+    user:
+      name: user
+      password: 1234
+      roles: ADMIN
+
+
 jwt:
   issuer: joseph8034@naver.com
   secret: BDE363989DFF426DCEB7C361DA13F100
